--- a/ExamenCodeAlong/appsettings.json
+++ b/ExamenCodeAlong/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EhelpBContext": "Server=(localdb)\\mssqllocaldb;Database=EhelpB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "EhelpBContext": "Server=(localdb)\\mssqllocaldb;Database=EhelpB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ExamenCodeAlong;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
